--- a/index.html
+++ b/index.html
@@ -3,80 +3,135 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="CV, Curriculum, Desarrollo, Programación">
-    <meta name="description" content="Curriculum Vitae de Andres Salazar, un desarrollador apasionado por la programación y el desarrollo de software.">
+    <meta name="keywords" content="CV, Curriculum, Computación, Datos, Desarrollo, Andres Salazar">
+    <meta name="description" content="Curriculum Vitae de Andres Salazar Macías, estudiante de Ingeniería en Computación con experiencia en desarrollo web y ciencia de datos.">
     <meta name="author" content="Andres Salazar">
     <title>Curriculum Vitae Andres Salazar</title>
+    <link rel="stylesheet" href="recursos/css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Andres Salazar</h1>
+        <h1>Andrés Salazar Macías</h1>
+        <p>Estudiante en Ingeniería en Computación</p>
         <nav>
             <ul>
                 <li><a href="#perfil">Perfil</a></li>
                 <li><a href="#experiencia">Experiencia</a></li>
+                <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="#educacion">Educación</a></li>
                 <li><a href="#habilidades">Habilidades</a></li>
+                <li><a href="#idiomas">Idiomas</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
         <section id="perfil">
-            <h2>Perfil</h2>
+            <h2>Mi Perfil</h2>
             <img src="recursos/img/foto_perfil.jpeg" alt="Foto de Andres Salazar">
-            <p>Hola, soy Andres Salazar, un desarrollador apasionado por la tecnología, la programación y el aprendizaje constante. Me motiva resolver problemas y crear soluciones útiles.</p>
+            <p>Estudiante de Ingeniería en Computación con sólida formación en desarrollo web, bases de datos y ciencia de datos. Enfocado en la creación de soluciones tecnológicas innovadoras, la optimización de procesos y la automatización mediante programación. Comprometido con la excelencia, la mejora continua y el impacto tecnológico a través del aprendizaje y la aplicación práctica del conocimiento.</p>
         </section>
 
         <section id="experiencia">
-            <h2>Experiencia</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Periodo</th>
-                        <th>Cargo</th>
-                        <th>Descripción</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>2024 (Marzo - Actualidad)</td>
-                        <td>Desarrollador Web Fullstack</td>
-                        <td>Diseño y desarrollo de sitios web personalizados para pequeños negocios usando HTML, CSS, JavaScript y React.</td>
-                    </tr>
-                </tbody>
-            </table>
+            <h2>Experiencia Académica y Profesional</h2>
+            <ul>
+                <li><strong>Pasante Desarrollador Fullstack – Banco de Guayaquil</strong> (Mayo 2025 – Actualidad)</li>
+                <li><strong>Ayudante de Cátedra de Programación de Sistemas</strong> (Mayo 2025 – Actualidad)</li>
+                <li><strong>Pasante – GTSI ESPOL (Sistema de mesa de ayuda Helpdesk)</strong> (Marzo 2025 - Mayo 2025)</li>
+                <li>Ayudante de teoría. Elaboración de material de apoyo y resolución de dudas.</li>
+                <li><strong>Ayudante de Cátedra de Matemáticas para el Prepolitécnico</strong> – Dic 2024 a Ene 2025</li>
+                <li><strong>Ayudante de Cátedra de Matemáticas Discretas</strong> – PAO II 2024</li>
+                <li><strong>Ayudante de Cátedra de Estructuras de Datos</strong> – PAO II 2024</li>
+                <li><strong>Ayudante de Cátedra de Cálculo de una variable</strong> – PAO I 2024</li>
+            </ul>
         </section>
 
+
+        <section id="proyectos">
+            <h2>Proyectos</h2>
+            <ul>
+                <li><strong>Staff de WiDS (Women in Data Science)</strong> – ESPOL (2024 - Actualidad)
+                    <ul>
+                        <li>Difusión de iniciativas en ciencia de datos.</li>
+                        <li>Organización de eventos y talleres educativos sobre analítica de datos.</li>
+                    </ul>
+                </li>
+                <li><strong>Desarrollador Web y Analista de Datos</strong> – Club TAWS (2023 - Actualidad)
+                    <ul>
+                        <li>Desarrollo de aplicaciones web con Django, Node.js y React.</li>
+                        <li>Gestión de bases de datos SQL y NoSQL para proyectos académicos.</li>
+                        <li>Dashboards y analítica de datos con Python y Power BI.</li>
+                    </ul>
+                </li>
+                <li><strong>Banco de Guayaquil – Proyecto de integración y desarrollo interno</strong>
+                    <ul>
+                        <li>Desarrollo de sistemas del área de comercio con enfoque en escalabilidad.</li>
+                        <li>Integración de servicios internos con arquitectura fullstack (React, APIs, SQL).</li>
+                    </ul>
+                </li>
+                <li><strong>Implementación de Sistema de Mesa de Ayuda con Odoo (Módulo Helpdesk)</strong> – GTSI ESPOL
+                    <ul>
+                        <li>Automatización de atención a usuarios mediante sistema de tickets.</li>
+                        <li>Optimización de flujos de soporte, mejora de atención y satisfacción del cliente.</li>
+                    </ul>
+                </li>
+                <li><strong>Desarrollo e Integración de Robots Autónomos – COPOL</strong>
+                    <ul>
+                        <li>Ganador del Copol Robotics Competition.</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+
         <section id="educacion">
-            <h2>Educación</h2>
+            <h2>Formación</h2>
             <ol>
                 <li>
-                    <strong>Ingeniería en Computacion</strong> – Escuela Superior Politécnica del Litoral  
-                    <br>Año de inicio: 2023 – En curso
+                    <strong>ESPOL - Escuela Superior Politécnica del Litoral</strong> (2023 - Actualidad)
+                    <br>Ingeniería en Computación
                 </li>
                 <li>
-                    <strong>Bachiller Técnico en Informática</strong> – Colegio Técnico Nacional  
-                    <br>Graduación: 2022
+                    <strong>Unidad Educativa Politécnico “COPOL”</strong> (2018 - 2023)
+                    <br>Diploma IB (Bachillerato Internacional) en Ingeniería
+                </li>
+                <li>
+                    <strong>Colegio Americano de Guayaquil</strong> (2014 - 2018)
+                    <br>Certificado de Educación Primaria
                 </li>
             </ol>
         </section>
 
         <section id="habilidades">
-            <h2>Habilidades</h2>
+            <h2>Herramientas y Tecnologías</h2>
             <ul>
-                <li>Desarrollo Web (HTML, CSS, JavaScript)</li>
-                <li>React y Node.js</li>
-                <li>SQL y bases de datos relacionales</li>
-                <li>Control de versiones con Git</li>
+                <li><strong>Desarrollo Web:</strong> JavaScript, Python. Frameworks: Django, Node.js, React.</li>
+                <li><strong>Bases de Datos:</strong> SQL (PostgreSQL, MySQL), NoSQL (MongoDB, Firebase).</li>
+                <li><strong>Ciencia de Datos y Analítica:</strong> Python, Pandas, NumPy, Scikit-learn, Power BI. Modelos predictivos y Machine Learning.</li>
+                <li><strong>Automatización y Computación:</strong> Programación en Python y JavaScript. Automatización de procesos con scripts y API REST.</li>
+                <li><strong>Control de versiones:</strong> Git y GitHub.</li>
+            </ul>
+        </section>
+
+        <section id="idiomas">
+            <h2>Idiomas</h2>
+            <ul>
+                <li>Español: Nativo</li>
+                <li>Inglés: Nivel Alto</li>
+                <li>Alemán: Nivel Medio</li>
             </ul>
         </section>
 
         <section id="contacto">
             <h2>Contacto</h2>
-            <p>Si deseas ponerte en contacto conmigo, por favor completa el siguiente formulario:</p>
-            
-            <form action="#" method="post">
+            <ul>
+                <li>📞 098 447 1745</li>
+                <li>📧 <a href="mailto:aasalazar@espol.edu.ec">aasalazar@espol.edu.ec</a></li>
+                <li>🏫 Escuela Superior Politécnica del Litoral (ESPOL)</li>
+            </ul>
+
+            <form action="exito.html" method="get">
                 <label for="nombre">Nombre completo:</label>
                 <input type="text" id="nombre" name="nombre" required>
 
@@ -90,26 +145,8 @@
 
                 <fieldset>
                     <legend>¿Cómo prefieres ser contactado?</legend>
-                    <label>
-                        <input type="radio" name="contacto" value="email" required>
-                        Email
-                    </label>
-                    <label>
-                        <input type="radio" name="contacto" value="telefono" required>
-                        Teléfono
-                    </label>
-                </fieldset>
-
-                <fieldset>
-                    <legend>Área de intereses</legend>
-                    <input type="checkbox" name="tecnologia" id="tecnologia">
-                    <label for="tecnologia">Desarrollo</label>
-                    <input type="checkbox" name="educacion" id="educacion">
-                    <label for="educacion">Educación</label>
-                    <input type="checkbox" name="investigacion" id="investigacion">
-                    <label for="investigacion">Investigación</label>
-                    <input type="checkbox" name="otros" id="otros">
-                    <label for="otros">Otros</label>
+                    <label><input type="radio" name="contacto" value="email" required> Email</label>
+                    <label><input type="radio" name="contacto" value="telefono" required> Teléfono</label>
                 </fieldset>
 
                 <label for="mensaje">Mensaje:</label>
@@ -118,18 +155,11 @@
                 <button type="submit">Enviar</button>
             </form>
 
-            <p>O puedes contactarme directamente a través de:</p>
+            <p>También puedes contactarme directamente:</p>
             <ul>
                 <li><a href="mailto:aasalazar@espol.edu.ec">Correo</a></li>
                 <li><a href="https://www.linkedin.com/in/aasalazarm/" target="_blank">LinkedIn</a></li>
             </ul>
-
-    
-        </section>
-
-        <section id="referencias">
-            <h2>Referencias</h2>
-            <p>Disponibles a solicitud.</p>
         </section>
     </main>
 
