--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Andrés Salazar Macías</h1>
+        <h1>Andrés Alexis Salazar Macías</h1>
         <p>Estudiante en Ingeniería en Computación</p>
         <nav>
             <ul>
@@ -160,7 +160,12 @@
                 <li><a href="mailto:aasalazar@espol.edu.ec">Correo</a></li>
                 <li><a href="https://www.linkedin.com/in/aasalazarm/" target="_blank">LinkedIn</a></li>
             </ul>
+
+            <div style="width:100%;max-width:400px; margin-top: 1rem;">
+<iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3987.0214862661687!2d-79.9668098!3d-2.1454569000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwMDgnNDMuNiJTIDc5wrA1OCcwMC41Ilc!5e0!3m2!1ses-419!2sec!4v1748836672958!5m2!1ses-419!2sec" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </section>
+
     </main>
 
     <footer>
