diseño por columnas

--- a/index.html
+++ b/index.html
@@ -33,139 +33,142 @@
             <p>Estudiante de Ingeniería en Computación con sólida formación en desarrollo web, bases de datos y ciencia de datos. Enfocado en la creación de soluciones tecnológicas innovadoras, la optimización de procesos y la automatización mediante programación. Comprometido con la excelencia, la mejora continua y el impacto tecnológico a través del aprendizaje y la aplicación práctica del conocimiento.</p>
         </section>
 
-        <section id="experiencia">
-            <h2>Experiencia Académica y Profesional</h2>
-            <ul>
-                <li><strong>Pasante Desarrollador Fullstack – Banco de Guayaquil</strong> (Mayo 2025 – Actualidad)</li>
-                <li><strong>Ayudante de Cátedra de Programación de Sistemas</strong> (Mayo 2025 – Actualidad)</li>
-                <li><strong>Pasante – GTSI ESPOL (Sistema de mesa de ayuda Helpdesk)</strong> (Marzo 2025 - Mayo 2025)</li>
-                <li>Ayudante de teoría. Elaboración de material de apoyo y resolución de dudas.</li>
-                <li><strong>Ayudante de Cátedra de Matemáticas para el Prepolitécnico</strong> – Dic 2024 a Ene 2025</li>
-                <li><strong>Ayudante de Cátedra de Matemáticas Discretas</strong> – PAO II 2024</li>
-                <li><strong>Ayudante de Cátedra de Estructuras de Datos</strong> – PAO II 2024</li>
-                <li><strong>Ayudante de Cátedra de Cálculo de una variable</strong> – PAO I 2024</li>
-            </ul>
-        </section>
+        <div class="fila">
+            <section id="experiencia">
+                <h2>Experiencia Académica y Profesional</h2>
+                <ul>
+                    <li><strong>Pasante Desarrollador Fullstack – Banco de Guayaquil</strong> (Mayo 2025 – Actualidad)</li>
+                    <li><strong>Ayudante de Cátedra de Programación de Sistemas</strong> (Mayo 2025 – Actualidad)</li>
+                    <li><strong>Pasante – GTSI ESPOL (Sistema de mesa de ayuda Helpdesk)</strong> (Marzo 2025 - Mayo 2025)</li>
+                    <li>Ayudante de teoría. Elaboración de material de apoyo y resolución de dudas.</li>
+                    <li><strong>Ayudante de Cátedra de Matemáticas para el Prepolitécnico</strong> – Dic 2024 a Ene 2025</li>
+                    <li><strong>Ayudante de Cátedra de Matemáticas Discretas</strong> – PAO II 2024</li>
+                    <li><strong>Ayudante de Cátedra de Estructuras de Datos</strong> – PAO II 2024</li>
+                    <li><strong>Ayudante de Cátedra de Cálculo de una variable</strong> – PAO I 2024</li>
+                </ul>
+            </section>
 
+            <section id="proyectos">
+                <h2>Proyectos</h2>
+                <ul>
+                    <li><strong>Staff de WiDS (Women in Data Science)</strong> – ESPOL (2024 - Actualidad)
+                        <ul>
+                            <li>Difusión de iniciativas en ciencia de datos.</li>
+                            <li>Organización de eventos y talleres educativos sobre analítica de datos.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Desarrollador Web y Analista de Datos</strong> – Club TAWS (2023 - Actualidad)
+                        <ul>
+                            <li>Desarrollo de aplicaciones web con Django, Node.js y React.</li>
+                            <li>Gestión de bases de datos SQL y NoSQL para proyectos académicos.</li>
+                            <li>Dashboards y analítica de datos con Python y Power BI.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Banco de Guayaquil – Proyecto de integración y desarrollo interno</strong>
+                        <ul>
+                            <li>Desarrollo de sistemas del área de comercio con enfoque en escalabilidad.</li>
+                            <li>Integración de servicios internos con arquitectura fullstack (React, APIs, SQL).</li>
+                        </ul>
+                    </li>
+                    <li><strong>Implementación de Sistema de Mesa de Ayuda con Odoo (Módulo Helpdesk)</strong> – GTSI ESPOL
+                        <ul>
+                            <li>Automatización de atención a usuarios mediante sistema de tickets.</li>
+                            <li>Optimización de flujos de soporte, mejora de atención y satisfacción del cliente.</li>
+                        </ul>
+                    </li>
+                    <li><strong>Desarrollo e Integración de Robots Autónomos – COPOL</strong>
+                        <ul>
+                            <li>Ganador del Copol Robotics Competition.</li>
+                        </ul>
+                    </li>
+                </ul>
+            </section>
+        </div>
 
-        <section id="proyectos">
-            <h2>Proyectos</h2>
-            <ul>
-                <li><strong>Staff de WiDS (Women in Data Science)</strong> – ESPOL (2024 - Actualidad)
-                    <ul>
-                        <li>Difusión de iniciativas en ciencia de datos.</li>
-                        <li>Organización de eventos y talleres educativos sobre analítica de datos.</li>
-                    </ul>
-                </li>
-                <li><strong>Desarrollador Web y Analista de Datos</strong> – Club TAWS (2023 - Actualidad)
-                    <ul>
-                        <li>Desarrollo de aplicaciones web con Django, Node.js y React.</li>
-                        <li>Gestión de bases de datos SQL y NoSQL para proyectos académicos.</li>
-                        <li>Dashboards y analítica de datos con Python y Power BI.</li>
-                    </ul>
-                </li>
-                <li><strong>Banco de Guayaquil – Proyecto de integración y desarrollo interno</strong>
-                    <ul>
-                        <li>Desarrollo de sistemas del área de comercio con enfoque en escalabilidad.</li>
-                        <li>Integración de servicios internos con arquitectura fullstack (React, APIs, SQL).</li>
-                    </ul>
-                </li>
-                <li><strong>Implementación de Sistema de Mesa de Ayuda con Odoo (Módulo Helpdesk)</strong> – GTSI ESPOL
-                    <ul>
-                        <li>Automatización de atención a usuarios mediante sistema de tickets.</li>
-                        <li>Optimización de flujos de soporte, mejora de atención y satisfacción del cliente.</li>
-                    </ul>
-                </li>
-                <li><strong>Desarrollo e Integración de Robots Autónomos – COPOL</strong>
-                    <ul>
-                        <li>Ganador del Copol Robotics Competition.</li>
-                    </ul>
-                </li>
-            </ul>
-        </section>
+        <div class="fila">
+            <section id="educacion">
+                <h2>Formación</h2>
+                <ol>
+                    <li>
+                        <strong>ESPOL - Escuela Superior Politécnica del Litoral</strong> (2023 - Actualidad)
+                        <br>Ingeniería en Computación
+                    </li>
+                    <li>
+                        <strong>Unidad Educativa Politécnico “COPOL”</strong> (2018 - 2023)
+                        <br>Diploma IB (Bachillerato Internacional) en Ingeniería
+                    </li>
+                    <li>
+                        <strong>Colegio Americano de Guayaquil</strong> (2014 - 2018)
+                        <br>Certificado de Educación Primaria
+                    </li>
+                </ol>
+            </section>
 
+            <section id="habilidades">
+                <h2>Herramientas y Tecnologías</h2>
+                <ul>
+                    <li><strong>Desarrollo Web:</strong> JavaScript, Python. Frameworks: Django, Node.js, React.</li>
+                    <li><strong>Bases de Datos:</strong> SQL (PostgreSQL, MySQL), NoSQL (MongoDB, Firebase).</li>
+                    <li><strong>Ciencia de Datos y Analítica:</strong> Python, Pandas, NumPy, Scikit-learn, Power BI.</li>
+                    <li><strong>Automatización:</strong> Python, JavaScript y API REST.</li>
+                    <li><strong>Control de versiones:</strong> Git y GitHub.</li>
+                </ul>
+            </section>
+        </div>
 
-        <section id="educacion">
-            <h2>Formación</h2>
-            <ol>
-                <li>
-                    <strong>ESPOL - Escuela Superior Politécnica del Litoral</strong> (2023 - Actualidad)
-                    <br>Ingeniería en Computación
-                </li>
-                <li>
-                    <strong>Unidad Educativa Politécnico “COPOL”</strong> (2018 - 2023)
-                    <br>Diploma IB (Bachillerato Internacional) en Ingeniería
-                </li>
-                <li>
-                    <strong>Colegio Americano de Guayaquil</strong> (2014 - 2018)
-                    <br>Certificado de Educación Primaria
-                </li>
-            </ol>
-        </section>
+        <div class="fila">
+            <section id="idiomas">
+                <h2>Idiomas</h2>
+                <ul>
+                    <li>Español: Nativo</li>
+                    <li>Inglés: Nivel Alto</li>
+                    <li>Alemán: Nivel Medio</li>
+                </ul>
+            </section>
 
-        <section id="habilidades">
-            <h2>Herramientas y Tecnologías</h2>
-            <ul>
-                <li><strong>Desarrollo Web:</strong> JavaScript, Python. Frameworks: Django, Node.js, React.</li>
-                <li><strong>Bases de Datos:</strong> SQL (PostgreSQL, MySQL), NoSQL (MongoDB, Firebase).</li>
-                <li><strong>Ciencia de Datos y Analítica:</strong> Python, Pandas, NumPy, Scikit-learn, Power BI. Modelos predictivos y Machine Learning.</li>
-                <li><strong>Automatización y Computación:</strong> Programación en Python y JavaScript. Automatización de procesos con scripts y API REST.</li>
-                <li><strong>Control de versiones:</strong> Git y GitHub.</li>
-            </ul>
-        </section>
+            <section id="contacto">
+                <h2>Contacto</h2>
+                <ul>
+                    <li>📞 098 447 1745</li>
+                    <li>📧 <a href="mailto:aasalazar@espol.edu.ec">aasalazar@espol.edu.ec</a></li>
+                    <li>🏫 Escuela Superior Politécnica del Litoral (ESPOL)</li>
+                </ul>
 
-        <section id="idiomas">
-            <h2>Idiomas</h2>
-            <ul>
-                <li>Español: Nativo</li>
-                <li>Inglés: Nivel Alto</li>
-                <li>Alemán: Nivel Medio</li>
-            </ul>
-        </section>
+                <form action="exito.html" method="get">
+                    <label for="nombre">Nombre completo:</label>
+                    <input type="text" id="nombre" name="nombre" required>
 
-        <section id="contacto">
-            <h2>Contacto</h2>
-            <ul>
-                <li>📞 098 447 1745</li>
-                <li>📧 <a href="mailto:aasalazar@espol.edu.ec">aasalazar@espol.edu.ec</a></li>
-                <li>🏫 Escuela Superior Politécnica del Litoral (ESPOL)</li>
-            </ul>
+                    <label for="motivo">Motivo de contacto:</label>
+                    <select id="motivo" name="motivo" required>
+                        <option value="" disabled selected>Seleccione una opción</option>
+                        <option value="consulta">Consulta</option>
+                        <option value="colaboracion">Colaboración</option>
+                        <option value="otro">Otro</option>
+                    </select>
 
-            <form action="exito.html" method="get">
-                <label for="nombre">Nombre completo:</label>
-                <input type="text" id="nombre" name="nombre" required>
+                    <fieldset>
+                        <legend>¿Cómo prefieres ser contactado?</legend>
+                        <label><input type="radio" name="contacto" value="email" required> Email</label>
+                        <label><input type="radio" name="contacto" value="telefono" required> Teléfono</label>
+                    </fieldset>
 
-                <label for="motivo">Motivo de contacto:</label>
-                <select id="motivo" name="motivo" required>
-                    <option value="" disabled selected>Seleccione una opción</option>
-                    <option value="consulta">Consulta</option>
-                    <option value="colaboracion">Colaboración</option>
-                    <option value="otro">Otro</option>
-                </select>
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
 
-                <fieldset>
-                    <legend>¿Cómo prefieres ser contactado?</legend>
-                    <label><input type="radio" name="contacto" value="email" required> Email</label>
-                    <label><input type="radio" name="contacto" value="telefono" required> Teléfono</label>
-                </fieldset>
+                    <button type="submit">Enviar</button>
+                </form>
 
-                <label for="mensaje">Mensaje:</label>
-                <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+                <p>También puedes contactarme directamente:</p>
+                <ul>
+                    <li><a href="mailto:aasalazar@espol.edu.ec">Correo</a></li>
+                    <li><a href="https://www.linkedin.com/in/aasalazarm/" target="_blank">LinkedIn</a></li>
+                </ul>
 
-                <button type="submit">Enviar</button>
-            </form>
-
-            <p>También puedes contactarme directamente:</p>
-            <ul>
-                <li><a href="mailto:aasalazar@espol.edu.ec">Correo</a></li>
-                <li><a href="https://www.linkedin.com/in/aasalazarm/" target="_blank">LinkedIn</a></li>
-            </ul>
-
-            <div style="width:100%;max-width:400px; margin-top: 1rem;">
-<iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3987.0214862661687!2d-79.9668098!3d-2.1454569000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwMDgnNDMuNiJTIDc5wrA1OCcwMC41Ilc!5e0!3m2!1ses-419!2sec!4v1748836672958!5m2!1ses-419!2sec" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </section>
-
+                <div style="width:100%;max-width:400px; margin-top: 1rem;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3987.0214862661687!2d-79.9668098!3d-2.1454569000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwMDgnNDMuNiJTIDc5wrA1OCcwMC41Ilc!5e0!3m2!1ses-419!2sec!4v1748836672958!5m2!1ses-419!2sec" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </section>
+        </div>
     </main>
 
     <footer>
