--- a/index.html
+++ b/index.html
@@ -27,26 +27,22 @@
     </header>
 
     <main>
-        <section id="perfil">
-            <h2>Mi Perfil</h2>
-            <img src="recursos/img/foto_perfil.jpeg" alt="Foto de Andres Salazar">
-            <p>Estudiante de Ingeniería en Computación con sólida formación en desarrollo web, bases de datos y ciencia de datos. Enfocado en la creación de soluciones tecnológicas innovadoras, la optimización de procesos y la automatización mediante programación. Comprometido con la excelencia, la mejora continua y el impacto tecnológico a través del aprendizaje y la aplicación práctica del conocimiento.</p>
-        </section>
-
-        <div class="fila">
-            <section id="experiencia">
-                <h2>Experiencia Académica y Profesional</h2>
-                <ul>
-                    <li><strong>Pasante Desarrollador Fullstack – Banco de Guayaquil</strong> (Mayo 2025 – Actualidad)</li>
-                    <li><strong>Ayudante de Cátedra de Programación de Sistemas</strong> (Mayo 2025 – Actualidad)</li>
-                    <li><strong>Pasante – GTSI ESPOL (Sistema de mesa de ayuda Helpdesk)</strong> (Marzo 2025 - Mayo 2025)</li>
-                    <li>Ayudante de teoría. Elaboración de material de apoyo y resolución de dudas.</li>
-                    <li><strong>Ayudante de Cátedra de Matemáticas para el Prepolitécnico</strong> – Dic 2024 a Ene 2025</li>
-                    <li><strong>Ayudante de Cátedra de Matemáticas Discretas</strong> – PAO II 2024</li>
-                    <li><strong>Ayudante de Cátedra de Estructuras de Datos</strong> – PAO II 2024</li>
-                    <li><strong>Ayudante de Cátedra de Cálculo de una variable</strong> – PAO I 2024</li>
-                </ul>
+            <section id="perfil">
+                <h2>Mi Perfil</h2>
+                <div class="perfil-contenedor">
+                    <div class="perfil-texto">
+                        <p>
+                            Estudiante de Ingeniería en Computación con sólida formación en desarrollo web, bases de datos y ciencia de datos.
+                            Enfocado en la creación de soluciones tecnológicas innovadoras, la optimización de procesos y la automatización mediante programación.
+                            Comprometido con la excelencia, la mejora continua y el impacto tecnológico a través del aprendizaje y la aplicación práctica del conocimiento.
+                        </p>
+                    </div>
+                    <div class="perfil-imagen">
+                        <img src="recursos/img/foto_perfil.jpeg" alt="Foto de Andres Salazar">
+                    </div>
+                </div>
             </section>
+
 
             <section id="proyectos">
                 <h2>Proyectos</h2>
@@ -164,10 +160,34 @@
                     <li><a href="https://www.linkedin.com/in/aasalazarm/" target="_blank">LinkedIn</a></li>
                 </ul>
 
-                <div style="width:100%;max-width:400px; margin-top: 1rem;">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3987.0214862661687!2d-79.9668098!3d-2.1454569000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwMDgnNDMuNiJTIDc5wrA1OCcwMC41Ilc!5e0!3m2!1ses-419!2sec!4v1748836672958!5m2!1ses-419!2sec" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            </section>
+
+            <section id="ubicacion">
+                <h2>Ubicación y Vida Universitaria</h2>
+
+                <h3>📍 ¿Dónde encontrarme entre semana?</h3>
+                <p>Normalmente me encuentras en el campus de ESPOL, donde estudio y colaboro como ayudante de cátedra o en proyectos de desarrollo.</p>
+                <div style="width:100%;max-width:600px; margin: 1rem auto;">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3987.0214862661687!2d-79.9668098!3d-2.1454569000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwMDgnNDMuNiJTIDc5wrA1OCcwMC41Ilc!5e0!3m2!1ses-419!2sec!4v1748836672958!5m2!1ses-419!2sec"
+                        width="100%"
+                        height="300"
+                        style="border:0; border-radius:10px;"
+                        allowfullscreen=""
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+
+                <h3>🎓 Conoce mi universidad</h3>
+                <p>ESPOL es donde me formo como profesional. Este recorrido te mostrará por qué es un lugar que inspira excelencia:</p>
+                <div style="width:100%;max-width:600px; margin: 1rem auto;">
+                <iframe
+                width= width="100%" height="315" src="https://www.youtube.com/embed/WpcYRNhy3mE" title="Recorrido por la ESPOL" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
+
         </div>
     </main>
 
