--- a/index.html
+++ b/index.html
@@ -20,29 +20,46 @@
                 <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="#educacion">Educación</a></li>
                 <li><a href="#habilidades">Habilidades</a></li>
-                <li><a href="#idiomas">Idiomas</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-            <section id="perfil">
-                <h2>Mi Perfil</h2>
-                <div class="perfil-contenedor">
-                    <div class="perfil-texto">
-                        <p>
-                            Estudiante de Ingeniería en Computación con sólida formación en desarrollo web, bases de datos y ciencia de datos.
-                            Enfocado en la creación de soluciones tecnológicas innovadoras, la optimización de procesos y la automatización mediante programación.
-                            Comprometido con la excelencia, la mejora continua y el impacto tecnológico a través del aprendizaje y la aplicación práctica del conocimiento.
-                        </p>
-                    </div>
-                    <div class="perfil-imagen">
-                        <img src="recursos/img/foto_perfil.jpeg" alt="Foto de Andres Salazar">
-                    </div>
+        <section id="perfil">
+            <h2>Mi Perfil</h2>
+            <div class="perfil-contenedor">
+                <div class="perfil-texto">
+                    <p>
+                        Estudiante de Ingeniería en Computación con sólida formación en desarrollo web, bases de datos y ciencia de datos.
+                        Enfocado en la creación de soluciones tecnológicas innovadoras, la optimización de procesos y la automatización mediante programación.
+                        Comprometido con la excelencia, la mejora continua y el impacto tecnológico a través del aprendizaje y la aplicación práctica del conocimiento.
+                    </p>
                 </div>
-            </section>
+                <div class="perfil-imagen">
+                    <img src="recursos/img/foto_perfil.jpeg" alt="Foto de Andres Salazar">
+                </div>
+            </div>
+        </section>
 
+    <div class="fila">
+    <section id="experiencia">
+        <h2>Experiencia</h2>
+        <ul>
+            <li><strong>Banco de Guayaquil (2024 - Actualidad)</strong> – Desarrollador Fullstack en el área de comercio.
+                <ul>
+                    <li>Desarrollo de soluciones internas utilizando tecnologías modernas (React, Node.js, SQL).</li>
+                    <li>Integración de sistemas y mantenimiento de flujos críticos de negocio.</li>
+                </ul>
+            </li>
+            <li><strong>GTSI ESPOL (2023)</strong> – Implementación de módulo Helpdesk (Odoo).
+                <ul>
+                    <li>Automatización de soporte con sistema de tickets.</li>
+                    <li>Mejora de procesos de atención en la universidad.</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
 
             <section id="proyectos">
                 <h2>Proyectos</h2>
@@ -79,49 +96,36 @@
                     </li>
                 </ul>
             </section>
+
         </div>
 
         <div class="fila">
-            <section id="educacion">
-                <h2>Formación</h2>
-                <ol>
-                    <li>
-                        <strong>ESPOL - Escuela Superior Politécnica del Litoral</strong> (2023 - Actualidad)
-                        <br>Ingeniería en Computación
-                    </li>
-                    <li>
-                        <strong>Unidad Educativa Politécnico “COPOL”</strong> (2018 - 2023)
-                        <br>Diploma IB (Bachillerato Internacional) en Ingeniería
-                    </li>
-                    <li>
-                        <strong>Colegio Americano de Guayaquil</strong> (2014 - 2018)
-                        <br>Certificado de Educación Primaria
-                    </li>
-                </ol>
-            </section>
-
             <section id="habilidades">
                 <h2>Herramientas y Tecnologías</h2>
                 <ul>
                     <li><strong>Desarrollo Web:</strong> JavaScript, Python. Frameworks: Django, Node.js, React.</li>
                     <li><strong>Bases de Datos:</strong> SQL (PostgreSQL, MySQL), NoSQL (MongoDB, Firebase).</li>
-                    <li><strong>Ciencia de Datos y Analítica:</strong> Python, Pandas, NumPy, Scikit-learn, Power BI.</li>
+                    <li><strong>Ciencia de Datos:</strong> Python, Pandas, NumPy, Scikit-learn, Power BI.</li>
                     <li><strong>Automatización:</strong> Python, JavaScript y API REST.</li>
                     <li><strong>Control de versiones:</strong> Git y GitHub.</li>
                 </ul>
             </section>
-        </div>
 
-        <div class="fila">
-            <section id="idiomas">
-                <h2>Idiomas</h2>
-                <ul>
+            <section id="educacion">
+                <h2>Formación</h2>
+                <ol>
+                    <li><strong>ESPOL</strong> (2023 - Actualidad) – Ingeniería en Computación</li>
+                    <li><strong>Unidad Educativa Politécnico “COPOL”</strong> (2018 - 2023) – Diploma IB en Ingeniería</li>
+                    <li><strong>Colegio Americano de Guayaquil</strong> (2014 - 2018) – Certificado de Educación Primaria</li>
                     <li>Español: Nativo</li>
                     <li>Inglés: Nivel Alto</li>
                     <li>Alemán: Nivel Medio</li>
-                </ul>
+                </ol>
             </section>
 
+        </div>
+
+        <div class="fila">
             <section id="contacto">
                 <h2>Contacto</h2>
                 <ul>
@@ -159,8 +163,6 @@
                     <li><a href="mailto:aasalazar@espol.edu.ec">Correo</a></li>
                     <li><a href="https://www.linkedin.com/in/aasalazarm/" target="_blank">LinkedIn</a></li>
                 </ul>
-
-
             </section>
 
             <section id="ubicacion">
@@ -168,14 +170,9 @@
 
                 <h3>📍 ¿Dónde encontrarme entre semana?</h3>
                 <p>Normalmente me encuentras en el campus de ESPOL, donde estudio y colaboro como ayudante de cátedra o en proyectos de desarrollo.</p>
-                <div style="width:100%;max-width:600px; margin: 1rem auto;">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3987.0214862661687!2d-79.9668098!3d-2.1454569000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwMDgnNDMuNiJTIDc5wrA1OCcwMC41Ilc!5e0!3m2!1ses-419!2sec!4v1748836672958!5m2!1ses-419!2sec"
-                        width="100%"
-                        height="300"
-                        style="border:0; border-radius:10px;"
-                        allowfullscreen=""
-                        loading="lazy"
+                <div style="width:100%;max-width:600px;margin:1rem auto;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3987.0214862661687!2d-79.9668098!3d-2.1454569000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwMDgnNDMuNiJTIDc5wrA1OCcwMC41Ilc!5e0!3m2!1ses-419!2sec!4v1748836672958!5m2!1ses-419!2sec"
+                        width="100%" height="300" style="border:0;border-radius:10px;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
@@ -187,7 +184,6 @@
                 width= width="100%" height="315" src="https://www.youtube.com/embed/WpcYRNhy3mE" title="Recorrido por la ESPOL" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
-
         </div>
     </main>
 
