--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <li><a href="#perfil">Perfil</a></li>
                 <li><a href="#experiencia">Experiencia</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
-                <li><a href="#educacion">Educación</a></li>
-                <li><a href="#habilidades">Habilidades</a></li>
+                <li><a href="#formacion">Formacion</a></li>
                 <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#ubicacion">Ubicación</a></li>
             </ul>
         </nav>
     </header>
@@ -111,7 +111,7 @@
                 </ul>
             </section>
 
-            <section id="educacion">
+            <section id="formacion">
                 <h2>Formación</h2>
                 <ol>
                     <li><strong>ESPOL</strong> (2023 - Actualidad) – Ingeniería en Computación</li>
@@ -166,7 +166,7 @@
             </section>
 
             <section id="ubicacion">
-                <h2>Ubicación y Vida Universitaria</h2>
+                <h2>Ubicación</h2>
 
                 <h3>📍 ¿Dónde encontrarme entre semana?</h3>
                 <p>Normalmente me encuentras en el campus de ESPOL, donde estudio y colaboro como ayudante de cátedra o en proyectos de desarrollo.</p>
