--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <meta name="author" content="Andres Salazar">
     <title>Curriculum Vitae Andres Salazar</title>
     <link rel="stylesheet" href="recursos/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 <body>
-    <header>
+    <header class="animate__animated animate__fadeInDown">
         <h1>Andrés Alexis Salazar Macías</h1>
         <p>Estudiante en Ingeniería en Computación</p>
         <nav>
@@ -18,6 +20,7 @@
                 <li><a href="#perfil">Perfil</a></li>
                 <li><a href="#experiencia">Experiencia</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
+                <li><a href="#herramientas">Herramientas</a></li>
                 <li><a href="#formacion">Formacion</a></li>
                 <li><a href="#contacto">Contacto</a></li>
                 <li><a href="#ubicacion">Ubicación</a></li>
@@ -58,6 +61,14 @@
                     <li>Mejora de procesos de atención en la universidad.</li>
                 </ul>
             </li>
+            <li><strong>Idiomas</strong>
+                <ul>
+                    <li>Español: Nativo</li>
+                    <li>Inglés: Nivel Alto</li>
+                    <li>Alemán: Nivel Medio</li>
+                </ul>
+            </li>
+                                
         </ul>
     </section>
 
@@ -100,7 +111,7 @@
         </div>
 
         <div class="fila">
-            <section id="habilidades">
+            <section id="herramientas">
                 <h2>Herramientas y Tecnologías</h2>
                 <ul>
                     <li><strong>Desarrollo Web:</strong> JavaScript, Python. Frameworks: Django, Node.js, React.</li>
@@ -117,9 +128,6 @@
                     <li><strong>ESPOL</strong> (2023 - Actualidad) – Ingeniería en Computación</li>
                     <li><strong>Unidad Educativa Politécnico “COPOL”</strong> (2018 - 2023) – Diploma IB en Ingeniería</li>
                     <li><strong>Colegio Americano de Guayaquil</strong> (2014 - 2018) – Certificado de Educación Primaria</li>
-                    <li>Español: Nativo</li>
-                    <li>Inglés: Nivel Alto</li>
-                    <li>Alemán: Nivel Medio</li>
                 </ol>
             </section>
 
@@ -203,6 +211,7 @@
         <p>&copy; 2025 Andres Salazar. Todos los derechos reservados.</p>
     </footer>
     <script src="recursos/js/contacto.js"></script>
+    <script src="recursos/js/animaciones.js"></script>
 
 </body>
 </html>
