--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
     </footer>
     <script src="recursos/js/contacto.js"></script>
     <script src="recursos/js/animaciones.js"></script>
+    <script src="recursos/js/navbar.js"></script>
 
 </body>
 </html>
