--- a/index.html
+++ b/index.html
@@ -37,7 +37,18 @@
                         Estudiante de Ingeniería en Computación con sólida formación en desarrollo web, bases de datos y ciencia de datos.
                         Enfocado en la creación de soluciones tecnológicas innovadoras, la optimización de procesos y la automatización mediante programación.
                         Comprometido con la excelencia, la mejora continua y el impacto tecnológico a través del aprendizaje y la aplicación práctica del conocimiento.
+                        Me caracterizo por ser una persona comprometida con la mejora continua, el aprendizaje autónomo y la excelencia técnica. Busco generar un impacto 
+                        positivo en los entornos donde participo, integrando el conocimiento académico con la práctica profesional para crear soluciones innovadoras, eficientes
+                        y escalables. 
+                        <p>
+                        Si deseas conocer más sobre mis trabajos, proyectos y experiencia práctica, te invito a visitar mi portafolio personal:
+                        <a href="https://andressalazar19.github.io/AndresSalazar19/" target="_blank" rel="noopener noreferrer">
+                            andressalazar19.github.io/AndresSalazar19/
+                        </a>
+                        </p>
                     </p>
+
+
                 </div>
                 <div class="perfil-imagen">
                     <img src="recursos/img/foto_perfil.jpeg" alt="Foto de Andres Salazar">
@@ -55,7 +66,7 @@
                     <li>Integración de sistemas y mantenimiento de flujos críticos de negocio.</li>
                 </ul>
             </li>
-            <li><strong>GTSI ESPOL (2023)</strong> – Implementación de módulo Helpdesk (Odoo).
+            <li><strong>GTSI ESPOL (2024 Marzo - 2024 Mayo)</strong> – Implementación de módulo Helpdesk (Odoo).
                 <ul>
                     <li>Automatización de soporte con sistema de tickets.</li>
                     <li>Mejora de procesos de atención en la universidad.</li>
