--- a/index.html
+++ b/index.html
@@ -216,6 +216,35 @@
                 </div>
             </section>
         </div>
+
+        <section id="referencias" class="seccion-referencias">
+            <h2>Referencias</h2>
+            <div class="referencias-grid">
+                <div class="referencia">
+                    <h3>Denisse Cárdenas</h3>
+                    <p>Subgerente de Riesgo<br>Banco Machala</p>
+                    <blockquote>
+                        “Siempre demuestra confianza en su trabajo, criterio técnico sólido y una ética profesional admirable.”
+                    </blockquote>
+                </div>
+                <div class="referencia">
+                    <h3>Guillermo Baquerizo</h3>
+                    <p>Docente<br>ESPOL</p>
+                    <blockquote>
+                        “Su respaldo fue clave para ayudar a mis estudiantes. Tiene gran capacidad analítica, vocación de servicio y un compromiso genuino con el aprendizaje colectivo.”
+                    </blockquote>
+                </div>
+                <div class="referencia">
+                    <h3>Melissa Suárez</h3>
+                    <p>Ayudante de Bases de Datos<br>ESPOL</p>
+                    <blockquote>
+                        “Un colaborador constante en el desarrollo de análisis de bases de datos. Gran compañero de equipo, siempre dispuesto a ayudar, aportar ideas y mantener un ambiente positivo.”
+                    </blockquote>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
     <footer>
