--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="#formacion">Formacion</a></li>
                 <li><a href="#contacto">Contacto</a></li>
                 <li><a href="#ubicacion">Ubicación</a></li>
+                <li><a href="#referencias">Referencias</a></li>
             </ul>
         </nav>
     </header>
@@ -190,10 +191,11 @@
 
 
                 <p>También puedes contactarme directamente:</p>
-                <ul>
-                    <li><a href="mailto:aasalazar@espol.edu.ec">Correo</a></li>
-                    <li><a href="https://www.linkedin.com/in/aasalazarm/" target="_blank">LinkedIn</a></li>
-                </ul>
+            <ul class="contacto-enlaces">
+                <li><a href="mailto:aasalazar@espol.edu.ec">Correo</a></li>
+                <li><a href="https://www.linkedin.com/in/aasalazarm/" target="_blank">LinkedIn</a></li>
+            </ul>
+
             </section>
 
             <section id="ubicacion">
